--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Walmart</string>
+    <string name="total">Total:-</string>
+    <string name="pay_now">Pay Now</string>
 </resources>
