Final Edit done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Walmart</string>
     <string name="total">Total:-</string>
     <string name="pay_now">Pay Now</string>
+    <string name="cart_is_empty">Cart is Empty</string>
 </resources>
