--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="total">Total:-</string>
     <string name="pay_now">Pay Now</string>
     <string name="cart_is_empty">Cart is Empty</string>
+    <string name="product_detail">Product Detail</string>
+    <string name="product_price">%1$f $</string>
 </resources>
